--- a/extensions/brew/package.json
+++ b/extensions/brew/package.json
@@ -62,6 +62,7 @@
     "@raycast/api": "^1.43.2",
     "@raycast/utils": "^1.4.11",
     "@types/stream-json": "^1.7.2",
+    "fast-sort": "^3.2.1",
     "node-fetch": "^2.6.7",
     "run-applescript": "^6.0.0",
     "stream-chain": "^2.2.5",
